--- a/pom.xml
+++ b/pom.xml
@@ -16,7 +16,7 @@
     <packaging>hpi</packaging>
 
     <properties>
-        <jenkins.version>2.60.1</jenkins.version>
+        <jenkins.version>2.150.3</jenkins.version>
         <findbugs.failOnError>false</findbugs.failOnError>
         <java.version>8</java.version>
         <maven.compiler.source>${java.version}</maven.compiler.source>
@@ -36,6 +36,11 @@
             <groupId>org.jenkins-ci.plugins</groupId>
             <artifactId>junit</artifactId>
             <version>1.9</version>
+        </dependency>
+        <dependency>
+            <groupId>org.jenkins-ci</groupId>
+            <artifactId>annotation-indexer</artifactId>
+            <version>1.12</version>
         </dependency>
 <!--
         <dependency>
