--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,16 @@
     <version>0.0.1-SNAPSHOT</version>
     <packaging>hpi</packaging>
 
+    <name>Remote Docker Build</name>
+    <description>Execute builds inside Docker containers on Jenkins build agents</description>
+    <url>https://github.com/gpuopenanalytics/remote-docker-plugin</url>
+    <licenses>
+        <license>
+            <name>MIT License</name>
+            <url>http://opensource.org/licenses/MIT</url>
+        </license>
+    </licenses>
+
     <properties>
         <jenkins.version>2.150.3</jenkins.version>
         <findbugs.failOnError>false</findbugs.failOnError>
@@ -23,7 +33,6 @@
         <maven.compiler.target>${java.version}</maven.compiler.target>
         <java.level>${java.version}</java.level>
     </properties>
-
 
     <dependencies>
         <dependency>
@@ -42,31 +51,6 @@
             <artifactId>annotation-indexer</artifactId>
             <version>1.12</version>
         </dependency>
-<!--
-        <dependency>
-            <groupId>org.jenkins-ci.plugins.workflow</groupId>
-            <artifactId>workflow-step-api</artifactId>
-            <version>2.9</version>
-            <optional>true</optional>
-        </dependency>
-        <dependency>
-            <groupId>org.jenkins-ci.plugins.workflow</groupId>
-            <artifactId>workflow-support</artifactId>
-            <version>3.2</version>
-            <optional>true</optional>
-        </dependency>
-        <dependency>
-            <groupId>org.jenkins-ci.plugins</groupId>
-            <artifactId>durable-task</artifactId>
-            <version>1.12</version>
-            <optional>true</optional>
-        </dependency>
-        <dependency>
-            <groupId>org.jenkins-ci.plugins</groupId>
-            <artifactId>docker-commons</artifactId>
-            <version>1.3.1</version>
-        </dependency>
-        -->
         <dependency>
             <groupId>com.google.code.findbugs</groupId>
             <artifactId>annotations</artifactId>
