--- a/pom.xml
+++ b/pom.xml
@@ -62,6 +62,11 @@
             <version>3.0.1</version>
             <scope>provided</scope>
         </dependency>
+        <dependency>
+            <groupId>org.jenkins-ci.plugins</groupId>
+            <artifactId>credentials</artifactId>
+            <version>2.1.16</version>
+        </dependency>
     </dependencies>
 
     <repositories>
